# reddit-bot

./: .gitignore  AGENT.md  AGENTS.md  Dockerfile  Makefile  README.md  args.py  config.example.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bot/: __init__.py  action_schema.py  agentctl.py  bot.py  config.py  database.py  ghost_logger.py  reporting.py  skills_sync.py  tool_cli.py
bot/actions/: __init__.py  base.py  browse.py  comment.py  community.py  dm.py  follow.py  post.py  profile.py  registry.py  save_hide.py  search.py  vote.py
bot/cli/: __init__.py  actions.py  bridge.py  menu.py  render.py
bot/control/: __init__.py  common.py  doctor.py  errors.py  executor.py  limits.py  profiles.py  queue.py  resolve.py  schedules.py  status.py
bot/utils/: __init__.py  chromedriver.py  (+13 more)
docs/: agentic-operations.md  chrome-debug-profiles.md  local-ui-plan.md  local-ui.md  next-improvement-plan.md  project-improvement-plan.md  scheduler-and-rate-limits.md  weekly-log-maintenance.md
scripts/: agentctl.py  reddit_healer_debug.py  reddit_tool.py  reddit_ui.py  restart_ui_server.sh  sync_skills.py
tests/: test_action_schema.py  test_agentctl.py  test_browse_action.py  test_chrome_debugging.py  test_chrome_extension_bridge.py  test_chromedriver.py  test_comment_action.py  test_community_action.py  test_config.py  test_credentials.py  test_database.py  test_dm_action.py  test_doctor.py  test_encryption.py  test_follow_action.py  test_identity_defaults.py  test_input_parser.py  test_main.py  test_mouse.py  test_post_action.py  test_profile_action.py  test_proxy.py  test_reddit_healer_debug.py  test_reddit_healer_extension_source.py  test_reporting.py  test_resolve_url.py  test_save_hide_action.py  test_search_action.py  test_self_healing_locator.py  test_skill_sync.py  test_tool_cli.py  test_tool_cli_do.py  test_validators.py  test_visible_vote.py  test_vote_action.py  test_web_api.py
web/: app.js  index.html  styles.css
(+17 files in other folders)
