[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-bot"
version = "2.0.0"
description = "A feature-rich Reddit automation bot using Selenium"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.10.0",
    "webdriver-manager>=4.0.0",
    "pyyaml>=6.0",
    "cryptography>=41.0",
    "tqdm>=4.65",
    "requests>=2.31",
    "bezier>=2023.7.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "ruff>=0.6",
]

[project.scripts]
reddit-bot = "main:main"
reddit-agentctl = "bot.agentctl:main"
reddit-tool = "bot.tool_cli:main"
reddit-ui = "bot.web.server:main"

[tool.setuptools]
py-modules = ["main", "args"]

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error::DeprecationWarning:bot\\..*",
    "error::DeprecationWarning:main",
    "error::DeprecationWarning:args",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
line-ending = "lf"
